2011-06-29 Bin Li <bili@suse.de>
	* configure.in:
	* Makefile.am:
	Fix update nm-novellvpn-service.name failed.
2011-06-28 Bin Li <bili@suse.de>
	* configure.in:
	Change version to 0.9.0 for NM 0.9.
	* properties/nm-novellvpn-dialog.ui:
	Delete the has_separator.
	* properties/Makefile.am:
	Add the libxml2's CFLAGS and LIBS.
2011-04-11 Bin Li <bili@novell.com>
	* configure.in:
	* common-gnome/Makefile.am:
	* common-gnome/keyring-helpers.h:
	* properties/Makefile.am:
	* auth-dialog/gnome-two-password-dialog.h:
	* auth-dialog/profile.c:
	* auth-dialog/main.c:
	* auth-dialog/Makefile.am:
	* auth-dialog/gnome-two-password-dialog.c:
	Replace the Deprecated API.
	* po/*.po:
	Replace the glade with ui.
2011-04-06 Bin Li <bili@novell.com>
	* configure.in:
	Support the GTK 3.0.
2011-04-01 Bin Li <bili@novell.com>
	* configure.in:
	* src/nm-novellvpn-service.c:
	* properties/Makefile.am:
	* properties/nm-novellvpn.c:
	Replace the GladeXML with the GtkBuilder.
2011-03-30 Bin Li <bili@novell.com>
	* configure.in:
	* src/Makefile.am:
	* common-gnome/Makefile.am:
	* properties/Makefile.am:
	* auth-dialog/Makefile.am:
	rename NETWORK_MANAGER_* build flags to just NM_*.
	* src/nm-novellvpn-service-novellvpn-helper.c:
	* src/nm-novellvpn-service.c:
	* properties/nm-novellvpn.c:
	* auth-dialog/profile.c:
	replace nm_warning/nm_info usage with g_warning/g_message
	* properties/nm-novellvpn-propertiesui.c:
	* properties/nm-novellvpn-propertiesui.h:
	* properties/nm-novellvpn-vpnui-impl.c:
	delete the unused files.
	* po/POTFILES.in:
	Fix to not include files not existing in the tarball.
	* properties/nm-novellvpn.c:
	Fix build for NM 0.8.2.
2010-07-16 Bin Li <bili@novell.com>
	* configure.in:
	Bump version to 0.8 for build with NetworkManager 0.8.
2010-03-21 Bin Li <bili@novell.com>
	* properties/nm-novellvpn.c:
	Save the password for system connection(bnc#582539).
2010-01-08 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service.c: