@@ -1,3 +1,7 @@
+2011-12-06 Bin Li <bili@suse.de>
+	* src/nm-novellvpn-service.c:
+	Prevent the password from being logged
+	From: Gary Ching-Pang Lin <chingpang@gmail.com>
 2011-06-29 Bin Li <bili@suse.de>
 	* configure.in:
 	* Makefile.am:
